style.css
/* ... */
.rpwe-li {
  text-align: center;
  flex: 1;
  flex-basis: 33.33333%;
  padding: 1rem;
}

.rpwe-img {
  display: block;
}

.rpwe-img img {
  display: block;
  margin: auto;
}

/*
 * Footer Contact Form
 */

.footer-contact-form {
  background-color: #025380;
  border-radius: 3px;
  color: #fff;
  padding: 1.25rem 1.25rem;
  margin-top: 2.5rem;
}

.footer-contact-form form {
  flex-wrap: wrap;
}

.footer-contact-form .wpcf7-form-control-wrap {
  display: block;
}

.footer-contact-form .wpcf7-response-output {
  margin: 1rem 0 0;
}

@media(min-width: 57.5rem) {
  .footer-contact-form .wpcf7-response-output {
    margin-top: 0;
    margin-bottom: 1rem;
  }
}

.footer-contact-form .div.wpcf7-mail-sent-ok,
.footer-contact-form .wpcf7-validation-errors {
  order: -1;
  width: 100%;
  border: none;
  border-radius: 3px;
  padding: 1.25rem;
}

.footer-contact-form .div.wpcf7-mail-sent-ok {
  background-color: #398f14;
}

.footer-contact-form .wpcf7-validation-errors {
  background-color: #d45a3e;
}

.footer-contact-form .wpcf7-not-valid-tip {
  color: #fff;
  background: #d45a3e;
  padding: 0.125rem 0.375rem;
  border-radius: 0 0 0.1875rem 0.1875rem;
  border: 1px solid #025380;
}

@media(min-width: 57.5rem) {
  .footer-contact-form__header,
  .footer-contact-form form {
    display: flex;
  }

  .footer-contact-form__header {
    align-items: center;
  }

  .footer-contact-form__header > :first-child,
  .form-group:nth-child(2) {
    width: 40%;
  }
  .footer-contact-form__header > :last-child,
  .form-group:nth-child(3) {
    width: 60%;
  }
}

.footer-contact-form__header > *,
.footer-contact-form .form-group {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.footer-contact-form .form-group {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.footer-contact-form .ajax-loader {
  display: none !important;
}

.footer-contact-form .form-item {
  margin-bottom: 1.5rem;
}

.footer-contact-form .form-item > br {
  display: none;
}

.footer-contact-form .form-item:last-child {
  margin-bottom: 0;
}

.footer-contact-form :nth-child(3) .form-item:last-child {
  text-align: right;
}

.footer-contact-form [type="submit"] {
  font-family: 'Fjalla One', sans-serif;
  padding-left: 1em;
  padding-right: 1em;
  width: 100%;
}

@media(min-width: 57.5rem) {
  .footer-contact-form [type=submit] {
    width: auto;
  }
}

.footer-contact-form__title {
  font-size: 4rem;
  line-height: 1.2;
  margin: 0;
}

.footer-contact-form__instructions {
  font-size: 1.125rem;
  font-size: 1.4;
}

/*
 * Footer Widgets
 */

.footer-widgets {
  margin-top: 3rem;
}

/*
 * Constant Contact Form
 */

.widget_sf_widget_constantcontact {
  text-align: center;
}

.widget_sf_widget_constantcontact form {
  display: flex;
  justify-content: center;
}

.widget_sf_widget_constantcontact .form-control {
  max-width: 24rem;
  border-radius: 3px 0 0 3px;
  border-right-width: 0;
}

.widget_sf_widget_constantcontact [type="submit"] {
  border-radius: 0 3px 3px 0;
  background-color: #AD0737;
  color: #fff;
  transition: background-color 0.5s;
}

.widget_sf_widget_constantcontact [type="submit"]:hover {
  background-color: #C7315C;
}

[role="contentinfo"] {
  margin-top: 3.5rem;
}

/*
 * Footer Message
 */

.footer-message {
  margin-top: 2.5rem;
  font-size: 0.875rem;
  text-align: center;
}

/*
 * Skip Nav
 */

#skip-navigation {
  padding: 1em;
  position: absolute;
  top: -20em;
  left: 1em;
  z-index: 1000;
  transition: top .3s ease-in-out;
}

#skip-navigation:focus {
  position: absolute;
  top: 20px;
  background: #FFF;
}

/*
 * AX Accordion
 */

.ax-accordion {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.ax-accordion__title {
  margin: 0;
}

.ax-accordion__body {
  padding-top: 1rem;
}

.ax-accordion__body > :last-child {
  margin-bottom: 0;
}

/*
 * Hide text
 */

.a11y-text-hide {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

/*
 * Utility Classes
 */

.list-unstyled {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}
.sr-only-focusable:active,
.sr-only-focusable:focus {
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
}

.center {
  text-align: center;
}

/*
 * Home Page
 */

.home .content > h2:first-of-type {
  font-size: 2rem;
}

.home .content p {
  font-size: 1.25rem;
}

